--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -44,13 +44,18 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Agents\Agent.cs" />
      <Compile Include="Assets\Scripts\Agents\Miner.cs" />
+     <Compile Include="Assets\Scripts\Agents\MinersWife.cs" />
      <Compile Include="Assets\Scripts\States\FiniteStateMachine.cs" />
      <Compile Include="Assets\Scripts\States\Miner\EnterMineAndDigForNugget.cs" />
      <Compile Include="Assets\Scripts\States\Miner\GoHomeAndSleepUntilRested.cs" />
      <Compile Include="Assets\Scripts\States\Miner\MinerGlobalState.cs" />
      <Compile Include="Assets\Scripts\States\Miner\QuenchThirst.cs" />
      <Compile Include="Assets\Scripts\States\Miner\VisitBankAndDepositGold.cs" />
+     <Compile Include="Assets\Scripts\States\MinersWife\DoHousework.cs" />
+     <Compile Include="Assets\Scripts\States\MinersWife\MinersWifeGlobalState.cs" />
+     <Compile Include="Assets\Scripts\States\MinersWife\VisitBathroom.cs" />
      <Compile Include="Assets\Scripts\States\State.cs" />
      <Compile Include="Assets\Scripts\WestWorldDisplayer.cs" />
      <Compile Include="Assets\Scripts\WestWorldLocation.cs" />
